# miad4304_sex_assigned_at_birth_ds

./: .gitignore  LICENSE  Makefile  README.md  app.py  params.yaml  pyproject.toml  requirements.txt  setup.cfg
docs/: mkdocs.yml
docs/docs/: index.md
miad/: __init__.py  dataset.py  features.py  plots.py
miad/model_training/: data_load.py  evaluate.py  layers.py  metrics.py  perfomance_plots.py  split.py  train.py
miad/modeling/: predict.py  train.py
miad/utils/: logs.py
notebooks/: 0.01-EDA.ipynb
references/: 01-summary.md
