[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "miad"
version = "0.0.1"
description = "El proyecto busca desarrollar un modelo para predecir el sexo al nacer de los usuarios de un neobanco en Colombia, basado en los nombres registrados en la aplicaci\u00f3n."
authors = [
  { name = "Team 2" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["miad"]
force_sort_within_sections = true
